--- a/backend/package.json
+++ b/backend/package.json
@@ -52,7 +52,13 @@
     "@medusajs/tax": "preview",
     "@medusajs/user": "preview",
     "@medusajs/workflow-engine-inmemory": "preview",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "@medusajs/admin-sdk": "preview",
+    "@medusajs/core-flows": "preview",
+    "@medusajs/medusa-cli": "preview",
+    "@medusajs/orchestration": "preview",
+    "@medusajs/utils": "preview",
+    "@medusajs/workflows-sdk": "preview"
   },
   "devDependencies": {
     "@medusajs/medusa-cli": "preview",
@@ -68,7 +74,13 @@
     "@types/react": "^18.3.2",
     "prop-types": "^15.8.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@medusajs/ui-preset": "^1.1.4",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.12",
+    "get-port": "^5.1.0",
+    "jest": "^29.7.0",
+    "medusa-test-utils": "preview"
   },
   "engines": {
     "node": "22.x",
