--- a/storefront/package.json
+++ b/storefront/package.json
@@ -2,18 +2,20 @@
   "name": "medusa-next",
   "version": "1.0.3",
   "private": true,
-  "author": "Riqwan Thamir <riqwan@medusajs.com> & Victor Gerbrands <victor@medusajs.com> (https://www.medusajs.com)",
-  "description": "Medusa B2B Starter Storefront",
+  "author": "Kasper Fabricius Kristensen <kasper@medusajs.com> & Victor Gerbrands <victor@medusajs.com> (https://www.medusajs.com)",
+  "description": "Next.js Starter to be used with Medusa server",
   "keywords": [
-    "medusa-storefront",
-    "medusa-b2b-storefront"
+    "medusa-storefront"
   ],
   "scripts": {
     "dev": "next dev -p 8000",
-    "build": "next build",
-    "start": "next start -p 8000",
+    "build": "npm run wait && next build",
+    "start": "next start -p ${PORT:-3000}",
+    "start:dev": "next start",
     "lint": "next lint",
-    "analyze": "ANALYZE=true next build"
+    "analyze": "ANALYZE=true next build",
+    "test-e2e": "playwright test e2e",
+    "wait": "node script/awaitBackendReady.js"
   },
   "resolutions": {
     "webpack": "^5",
@@ -22,7 +24,6 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "@hookform/error-message": "^2.0.0",
-    "@medusajs/icons": "^1.2.2",
     "@medusajs/js-sdk": "preview",
     "@medusajs/types": "preview",
     "@medusajs/ui": "preview",
@@ -33,7 +34,6 @@
     "@stripe/stripe-js": "^1.29.0",
     "algoliasearch": "^4.20.0",
     "axios": "^1.6.7",
-    "geist": "^1.3.1",
     "lodash": "^4.17.21",
     "next": "^14.0.0",
     "pg": "^8.11.3",
@@ -51,13 +51,13 @@
     "@babel/core": "^7.17.5",
     "@medusajs/client-types": "preview",
     "@medusajs/ui-preset": "preview",
+    "@playwright/test": "^1.41.1",
     "@types/lodash": "^4.14.195",
     "@types/node": "17.0.21",
     "@types/pg": "^8.11.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.18",
     "@types/react-instantsearch-dom": "^6.12.3",
-    "ansi-colors": "^4.1.3",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "eslint": "8.10.0",
