--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "medusa-2.0-boilerplate-backend",
+  "name": "medusa-starter-default",
   "version": "0.0.1",
-  "description": "A Prebaked Medusa 2.0 backend",
-  "author": "Rasmus Puls",
-  "type:": "module",
+  "description": "A starter for Medusa projects.",
+  "author": "Medusa (https://medusajs.com)",
   "license": "MIT",
   "keywords": [
     "sqlite",
@@ -16,16 +15,20 @@
   "scripts": {
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
-    "seed:once": "node script/seedOnce.js",
     "start": "medusa start",
-    "dev": "medusa develop"
+    "dev": "medusa develop",
+    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
+    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
+    "@medusajs/admin-sdk": "preview",
     "@medusajs/api-key": "preview",
     "@medusajs/auth": "preview",
     "@medusajs/auth-emailpass": "preview",
     "@medusajs/cache-inmemory": "preview",
     "@medusajs/cart": "preview",
+    "@medusajs/core-flows": "preview",
     "@medusajs/currency": "preview",
     "@medusajs/customer": "preview",
     "@medusajs/event-bus-local": "preview",
@@ -35,13 +38,12 @@
     "@medusajs/fulfillment-manual": "preview",
     "@medusajs/inventory-next": "preview",
     "@medusajs/medusa": "preview",
+    "@medusajs/medusa-cli": "preview",
     "@medusajs/notification": "preview",
     "@medusajs/notification-local": "preview",
-    "@medusajs/event-bus-redis": "preview",
-    "@medusajs/notification-sendgrid": "preview",
+    "@medusajs/orchestration": "preview",
     "@medusajs/order": "preview",
     "@medusajs/payment": "preview",
-    "@medusajs/payment-stripe": "preview",
     "@medusajs/pricing": "preview",
     "@medusajs/product": "preview",
     "@medusajs/promotion": "preview",
@@ -51,27 +53,33 @@
     "@medusajs/store": "preview",
     "@medusajs/tax": "preview",
     "@medusajs/user": "preview",
+    "@medusajs/utils": "preview",
     "@medusajs/workflow-engine-inmemory": "preview",
+    "@medusajs/workflows-sdk": "preview",
     "express": "^4.17.2"
   },
   "devDependencies": {
-    "@medusajs/medusa-cli": "preview",
+    "@medusajs/ui-preset": "^1.1.4",
     "@mikro-orm/cli": "5.9.7",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
     "@mikro-orm/postgresql": "5.9.7",
     "@stdlib/number-float64-base-normalize": "0.0.8",
     "@swc/core": "1.5.7",
+    "@swc/jest": "^0.2.36",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.12",
     "@types/mime": "1.3.5",
     "@types/node": "^17.0.8",
     "@types/react": "^18.3.2",
+    "get-port": "^5.1.0",
+    "jest": "^29.7.0",
+    "medusa-test-utils": "preview",
     "prop-types": "^15.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.1.6"
   },
   "engines": {
-    "node": "22.x",
-    "npm": "10.x"
+    "node": ">=20"
   }
 }
