--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "medusa-starter-default",
+  "name": "medusa-2.0-boilerplate-backend",
   "version": "0.0.1",
-  "description": "A starter for Medusa projects.",
-  "author": "Medusa (https://medusajs.com)",
+  "description": "A Prebaked Medusa 2.0 backend",
+  "author": "Rasmus Puls",
+  "type:": "module",
   "license": "MIT",
   "keywords": [
     "sqlite",
@@ -15,20 +16,16 @@
   "scripts": {
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
+    "seed:once": "node script/seedOnce.js",
     "start": "medusa start",
-    "dev": "medusa develop",
-    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
-    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
+    "dev": "medusa develop"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "preview",
     "@medusajs/api-key": "preview",
     "@medusajs/auth": "preview",
     "@medusajs/auth-emailpass": "preview",
     "@medusajs/cache-inmemory": "preview",
     "@medusajs/cart": "preview",
-    "@medusajs/core-flows": "preview",
     "@medusajs/currency": "preview",
     "@medusajs/customer": "preview",
     "@medusajs/event-bus-local": "preview",
@@ -38,12 +35,13 @@
     "@medusajs/fulfillment-manual": "preview",
     "@medusajs/inventory-next": "preview",
     "@medusajs/medusa": "preview",
-    "@medusajs/medusa-cli": "preview",
     "@medusajs/notification": "preview",
     "@medusajs/notification-local": "preview",
-    "@medusajs/orchestration": "preview",
+    "@medusajs/event-bus-redis": "preview",
+    "@medusajs/notification-sendgrid": "preview",
     "@medusajs/order": "preview",
     "@medusajs/payment": "preview",
+    "@medusajs/payment-stripe": "preview",
     "@medusajs/pricing": "preview",
     "@medusajs/product": "preview",
     "@medusajs/promotion": "preview",
@@ -53,33 +51,39 @@
     "@medusajs/store": "preview",
     "@medusajs/tax": "preview",
     "@medusajs/user": "preview",
-    "@medusajs/utils": "preview",
     "@medusajs/workflow-engine-inmemory": "preview",
-    "@medusajs/workflows-sdk": "preview",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "@medusajs/admin-sdk": "preview",
+    "@medusajs/core-flows": "preview",
+    "@medusajs/medusa-cli": "preview",
+    "@medusajs/orchestration": "preview",
+    "@medusajs/utils": "preview",
+    "@medusajs/workflows-sdk": "preview"
   },
   "devDependencies": {
-    "@medusajs/ui-preset": "^1.1.4",
+    "@medusajs/medusa-cli": "preview",
     "@mikro-orm/cli": "5.9.7",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
     "@mikro-orm/postgresql": "5.9.7",
     "@stdlib/number-float64-base-normalize": "0.0.8",
     "@swc/core": "1.5.7",
-    "@swc/jest": "^0.2.36",
     "@types/express": "^4.17.13",
-    "@types/jest": "^29.5.12",
     "@types/mime": "1.3.5",
     "@types/node": "^17.0.8",
     "@types/react": "^18.3.2",
-    "get-port": "^5.1.0",
-    "jest": "^29.7.0",
-    "medusa-test-utils": "preview",
     "prop-types": "^15.8.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@medusajs/ui-preset": "^1.1.4",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.12",
+    "get-port": "^5.1.0",
+    "jest": "^29.7.0",
+    "medusa-test-utils": "preview"
   },
   "engines": {
-    "node": ">=20"
+    "node": "22.x",
+    "npm": "10.x"
   }
 }
